Fix photo credit overlapping text

--- a/css/main-page/style.scss
+++ b/css/main-page/style.scss
@@ -383,7 +383,8 @@ header {
 /* ---- FOOTER---- */
 
 footer {
-    position: relative;
+    display: flex;
+    flex-flow: column;
     min-height: 50vh;
 
     .outer_menu {
@@ -466,9 +467,8 @@ footer {
                     opacity: 1;
                 }
             }
+        }
     }
-    
-}
 
     .join_us {
         display: inline-block;
@@ -490,20 +490,11 @@ footer {
     }
 
     .thank_you--section {
-        position:absolute;
-        right:0;
-        bottom:0;
-        margin: 0 10px 10px 0;
+        margin: 50px 10px 10px 0;
         font-family: $normal-font;
+
+        .photo__thank {
+            float: right;
+        }
     }
 }
-
-
-
-
-
-
-
-
-
-
