--- a/css/media-queries/queries.scss
+++ b/css/media-queries/queries.scss
@@ -473,7 +473,8 @@
         }
     
         .thank_you--section {
-           
+           font-size: 90%;
+           text-align: center;
         }
     }
 
